Added support for optionally mailing the contents of a global announcements first thread message to all Whirled users who have not opted out of such things. Bring on the newsletter.

--- a/src/gwt/client/msgs/MsgsMessages.properties
+++ b/src/gwt/client/msgs/MsgsMessages.properties
@@ -141,11 +141,19 @@ ntpTitle = Start a New Thread
 ntpSubject = Subject:
 
 ntpAnnounce = Announcement:
-ntpAnnounceTip = Announcement threads are specially marked and result in an \
-  entry being posted to the feed of all members.
+ntpAnnounceTip = Announcement threads are specially marked and cause a message to be \
+  posted to the feed of all members of this whirled.
+ntpMustAnnounceTip = This is the global announcements group. All threads are \
+  posted as announcements.
 
 ntpSticky = Sticky:
-ntpStickyTip = Sticky threads always show up at the top of the forum''s thread list.
+ntpStickyTip = Sticky threads always show up at the top of the thread list.
+
+ntpSpam = Spam:
+ntpSpamTip = Send this message in email to all Whirled members.
+ntpSpamConfirm = You are about to spam the entire Whirled user base. DO NOT \
+  do this unless you are authorized and know what you are doing. Are you sure \
+  you mean to do this?
 
 ntpFirstMessage = First message:
 
