Actually, let's just make a decent user interface. We still want a buy button that has the currency right in it, but that's going to be an HTML PITA.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -10,6 +10,13 @@
 # magically built from the properties file like the non-dynamic messages.
 
 #
+# Currency translations
+
+currency0 = coins
+currency1 = bars
+currency2 = bling
+
+#
 # Game match-making types
 
 gameType0 = Pre-matched Table
