--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -137,3 +137,4 @@ transactionsNone = No recent transactions of this type
 m_item_bought = Purchased {0} over at #shop-{1}_{2}
 m_item_magicfree = Magic-purchased {0} over at #shop-{1}_{2}
 m_item_sold = Sold {0} over at #shop-{1}_{2}
+m_item_affiliate = Affiliated user ({0}, #profile-{1}) purchased an item.
