--- a/src/gwt/client/games/GamesMessages.properties
+++ b/src/gwt/client/games/GamesMessages.properties
@@ -20,6 +20,9 @@ gdpDevVersion = Note: this is the in-development version of this game. Trophies 
 gdpDiscuss = Discussions
 gdpShop = Game Shop
 
+# Message so developers know why they don't have a PLAY button
+gdpNoWhirled = This AVRG does not have an associated whirled.
+
 tabInstructions = Instructions
 tabComments = Comments
 tabTrophies = Trophies
