--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -140,7 +140,7 @@ reportCreator = Creator
 
 # TODO: Proper linking
 # TODO: Consider moving these dynamic messages out into a seperate file to shrink MeMessagesLookup
-m_item_bought = Purchased {0} over at #shop-{1}_{2}
-m_item_magicfree = Magic-purchased {0} over at #shop-{1}_{2}
-m_item_sold = Sold {0} over at #shop-{1}_{2}
-m_item_affiliate = Affiliated user ({0}, #profile-{1}) purchased an item.
+m_item_bought = Purchased <a href="/#shop-l_{1}_{2}">{0}</a>
+m_item_magicfree = Magic-purchased <a href="/#shop-l_{1}_{2}">{0}</a>
+m_item_sold = Sold <a href="/#shop-l_{1}_{2}">{0}</a>
+m_item_affiliate = Affiliated user <a href="/#people-{1}">{0}</a> purchased an item.
