Added support for sending preview emails to onesself before spamming all the users. Did some simple tweaking of the format. We may want something less minimalist.

--- a/src/gwt/client/msgs/MsgsMessages.properties
+++ b/src/gwt/client/msgs/MsgsMessages.properties
@@ -159,6 +159,10 @@ ntpFirstMessage = First message:
 
 ntpSubmit = Start Thread
 
+ntpSendPreview = Send Preview
+ntpSendPreviewTip = Formats the message in email and sends a preview to your email address.
+ntpPreviewSent = Preview email sent to your email address.
+
 errNoSubject = Please enter a subject for your new thread.
 errNoMessage = Please enter the starting message for your new thread.
 errMissingReply = Please enter the text of your reply message.
