Added support for other items in Game Shops. It works thusly: the creator of the game specifies a shop tag in their game configuration. All items tagged with that shop tag *and made by the same creator* are shown in the Game Shop.

--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -101,6 +101,9 @@ gameWhirledLabel = Whirled
 gameWhirledTip = The Whirled associated with this game (you must be a manager)
 gameWhirledNone = None
 
+gameShopTag = Shop Tag
+gameShopTagTip = Items created by you and tagged with this tag will show up in your game shop
+
 errInvalidShot = The screenshot image must be a GIF, PNG or JPG and exactly {0}x{1} pixels.
 
 #
