--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -113,3 +113,5 @@ favoritesSideBarTitle = Show:
 # SuiteCatalogPanel
 
 suiteShopTitle = {0} Shop
+
+suiteNoItems = {0} has no {1} listed in its shop.
