Take out the horrible lie about being able to embed YouTube videos.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -129,9 +129,9 @@ itemUploadPitch7b = - <a href="#mail">Mail a Song</a> as a gift to a friend
 itemUploadPitch7c = - Coming soon: create playlists and put a jukebox in your room
 
 itemUploadTitle8 = Upload your Videos!
-itemUploadPitch8a = - Put YouTube Videos in your room
-itemUploadPitch8b = - Upload <a href="http://wiki.whirled.com/Uploading_Videos">FLV Videos</a>
-itemUploadPitch8c = - <a href="#mail">Mail a Video</a> as a gift to a friend
+itemUploadPitch8a = - Upload <a href="http://wiki.whirled.com/Uploading_Videos">FLV Videos</a>
+itemUploadPitch8b = - <a href="#mail">Mail a Video</a> as a gift to a friend
+itemUploadPitch8c =
 
 itemUploadTitle9 = Create your own Room Backdrop!
 itemUploadPitch9a = - Check out our tutorial on \
