Reduce the number of callbacks by encapsulating the gallery & photo list into one GalleryData class.  Simplify the create/update calls by passing a Gallery object back to the server, which now includes the thumbnail MediaDesc.  Add a list of galleries to profile and link the profile avatar image to profile gallery (both in DEV only for now because destination pages do not yet exist).

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -112,6 +112,12 @@ notInGroupsJoin = Join some Whirleds!
 inviteToGroup = Invite
 haveNoGroups = Sorry pardner. You don''t have invite privileges for any Whirleds.
 
+# GalleriesBlurb
+
+galleriesTitle = Galleries
+createGallery = Create Gallery
+noGalleriesSelf = You haven''t created any galleries yet.
+
 #
 # TrophiesBlurb
 
