--- a/src/gwt/client/shell/ServerMessages.properties
+++ b/src/gwt/client/shell/ServerMessages.properties
@@ -86,7 +86,7 @@ unsupported_webmail = The WebMail address is unsupported
 user_input_required = Unable to read from WebMail site
 max_webmail_attempts = Too many import attempts in a short period.  Please wait a few mintues and \
   try again.
-
+gallery_does_not_exist = Gallery does not exist.
 
 #
 # Admin messages
