New admin page to display affiliate mappings. - Looks like ass. - Can't edit it yet.

--- a/src/gwt/client/admin/AdminMessages.properties
+++ b/src/gwt/client/admin/AdminMessages.properties
@@ -22,11 +22,13 @@ lackPrivileges = Your account does not have the necessary privileges to view \
 title = Admin Console
 browserTitle = Player Browser
 adminControls = Admin functions:
+supportControls = Support functions:
 inviteControls = Invitation functions:
 testingControls = Testing functions:
 displayDashboard = Display Dashboard
 reviewButton = Review Flagged Items
 issueInvites = Issue Invites to Players
+affMapButton = View affiliate mappings
 browserPlayers = Player Browser
 spamPlayers = Spam Players
 viewABTests = View or Create A/B Tests
