- Use PagedTable - Add an update button to each row. - Actually update the mapping - Still TODO: update the users who used the updated referral.

--- a/src/gwt/client/admin/AdminMessages.properties
+++ b/src/gwt/client/admin/AdminMessages.properties
@@ -148,3 +148,11 @@ abTestDescription = Description
 abTestEnabled = Running
 abTestStarted = Started
 abTestEnded = Ended
+
+#
+# Affiliate mappings
+affMapTitle = Affiliate Mappings
+affiliate = Affiliate
+memberId = memberId
+update = Update
+badMemberId = Could not parse memberId: {0}.
