Checking in progress on Galleries GUI. It is still in pretty ugly shape, but there are at least placeholder panels in place to view, create, and edit gallery details. No drag-and-drop functionality yet for adding photos to a gallery.

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -247,3 +247,8 @@ ifriendMessage = Message:
 ifriendDefMessage = Let''s be buddies!
 ifriendSend = Send
 ifriendSent = Friend request sent.
+
+#
+# GalleryPanel
+galleriesTitle = Galleries
+
