--- a/src/gwt/client/person/PersonMessages.properties
+++ b/src/gwt/client/person/PersonMessages.properties
@@ -49,3 +49,11 @@ groupAnnouncement = {0} announcement: {1}
 
 selfRoomComment = {0} has {1} on the room {2}.
 selfRoomCommented = commented
+
+# Gallery messages
+
+profileGallery = Pictures of {0}
+saveButton = Save
+editButton = Edit
+emptyGallery = This gallery has no photos yet. Perhaps the owner is making an artistic statement \
+ about the nature of emptiness.
