Finished bling pool.  It is only started up if bars are enabled.  Currently scheduled to run at 3:00a every night.  Right now, the bling pool contains 0 bling by default, so it will not actually be executed unless you change this (either in code or via the runtime config).

--- a/.classpath
+++ b/.classpath
@@ -113,5 +113,6 @@
 	<classpathentry kind="lib" path="etc"/>
 	<classpathentry kind="lib" path="extlibs/java/aopalliance.jar"/>
 	<classpathentry kind="lib" path="extlibs/java/rabbitmq-client.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/quartz.jar"/>
 	<classpathentry kind="output" path="dist/classes"/>
 </classpath>
