- Refactoring MoneyLogic.awardCoins: Removed description, which is created internally. - Made some of the parameters of GameServerService.awardCoins implicit instead of being just a   copy of MoneyLogic's - Associate UserActions with a translation key - Added the rest of the transaction translations, no more "Invalid key"!

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -137,6 +137,7 @@ reportCoins = Coins
 reportBars = Bars
 reportBling = Bling
 reportCreator = Creator
+reportAffiliates = Affiliates
 
 # TODO: Proper linking
 # TODO: Consider moving these dynamic messages out into a seperate file to shrink MeMessagesLookup
@@ -144,3 +145,10 @@ m_item_bought = Purchased <a href="/#shop-l_{1}_{2}">{0}</a>.
 m_item_magicfree = Magic-purchased <a href="/#shop-l_{1}_{2}">{0}</a>.
 m_item_sold = Sold <a href="/#shop-l_{1}_{2}">{0}</a>.
 m_item_affiliate = Affiliated user <a href="/#people-{1}">{0}</a> purchased an item.
+m_played_game = Award from playing <a href="/#games-d_{1}">{0}</a>.
+m_invitee_joined = Award for inviting <a href="/people-{1}">{0}</a> to Whirled.
+m_guest_transfer = Transferred coins from your guest account when you registered.
+m_created_account = Some coins to start with. Welcome to Whirled!
+m_created_profile = Award for setting up your profile.
+m_earned_badge = Award for earning a badge.
+m_bought_bars = Bought bars.
