Added the ability to get the worth of bling in USD and added the info to the Transactions page.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -139,6 +139,10 @@ reportBling = Bling
 reportCreator = Creator
 reportAffiliates = Affiliates
 
+blingHeader = Bling
+blingBalance = Bling Balance:
+blingWorth = Bling Worth (USD):
+
 # TODO: Proper linking
 # TODO: Consider moving these dynamic messages out into a seperate file to shrink MeMessagesLookup
 m_item_bought = Purchased <a href="/#shop-l_{1}_{2}">{0}</a>.
