--- a/src/gwt/client/person/PersonMessages.properties
+++ b/src/gwt/client/person/PersonMessages.properties
@@ -57,3 +57,4 @@ saveButton = Save
 editButton = Edit
 emptyGallery = This gallery has no photos yet. Perhaps the owner is making an artistic statement \
  about the nature of emptiness.
+photoCount = {0} Photos
