--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -58,7 +58,7 @@ listingBuy = Buy!
 listingAltTip = Or buy with {0}:
 listingBuyAlt = Buy
 
-listingBuyBars = Need bars? <a href="{0}">Get them here!</a>
+listingBuyBars = Get bars!
 
 listingDelist = Delist Item
 listingDelistConfirm = Are you sure you want to remove this shop listing?
