Add slideshow to gallery view & names under image thumbnails.

--- a/src/gwt/client/person/PersonMessages.properties
+++ b/src/gwt/client/person/PersonMessages.properties
@@ -58,3 +58,5 @@ editButton = Edit
 emptyGallery = This gallery has no photos yet. Perhaps the owner is making an artistic statement \
  about the nature of emptiness.
 photoCount = {0} Photos
+slideshowStart = Slideshow
+slideshowStop = Stop
