Move error messages to properties file, pretty up the list galleries page, make sure galleries are viewable when not logged in.

--- a/src/gwt/client/person/PersonMessages.properties
+++ b/src/gwt/client/person/PersonMessages.properties
@@ -57,6 +57,11 @@ saveButton = Save
 editButton = Edit
 emptyGallery = This gallery has no photos yet. Perhaps the owner is making an artistic statement \
  about the nature of emptiness.
+galleryAddPhotos = Add Some Photos!
+galleryNoPhotosSelf = You don''t have any pictures in this gallery yet.
+galleryProfileNoPhotosSelf = You don''t have any pictures in your profile gallery yet.
+galleryNoPhotosOther = There are no pictures in this gallery.
+galleryNotFound = not find gallery.
 photoCount = {0} Photos
 slideshowStart = Slideshow
 slideshowStop = Stop
