Login -> logon. My little mind is beset by hobgoblins.

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -21,7 +21,7 @@ createTitle = Welcome to Whirled!
 createIntro = Create a Free Whirled Account
 createCoins = Get 1000 free coins when you sign up!
 createAlreadyMember = Already a member?
-createLoginLink = Logon!
+createLogonLink = Logon!
 
 createEmail = Email address:
 createEmailTip = You''ll use your email address to logon. We care about our players \
@@ -70,10 +70,10 @@ creatingAccount = Signing up...
 creatingDone = Logging in for the first time...
 
 #
-# Login page
+# Logon page
 
-loginPageTitle = Logon
-loginPageSubmit = Logon
+logonPageTitle = Logon
+logonPageSubmit = Logon
 
 #
 # OptOutPanel
