--- a/src/gwt/client/landing/LandingMessages.properties
+++ b/src/gwt/client/landing/LandingMessages.properties
@@ -12,7 +12,7 @@ titleCreators = Whirled Welcomes Creators
 # Landing page messages
 
 landingTitle = Whirled - Play games, make friends, make stuff.
-landingLogin = Logon
+landingLogon = Logon
 landingClickToStart = Click to Start the Video!
 landingTagline = Play games.  Make friends.  Make stuff.
 landingLevelUp = How do I level up?
