--- a/src/gwt/client/games/GamesMessages.properties
+++ b/src/gwt/client/games/GamesMessages.properties
@@ -94,7 +94,7 @@ gameTrophyEarnedOn = Earned on {0}
 #
 # TopRankingPanel
 
-trpLogin = Logon to see your rankings.
+trpLogon = Logon to see your rankings.
 trpLoading = Loading ratings...
 
 trpMyNoRankings = You and your friends have no rankings in this game.
