--- a/.classpath
+++ b/.classpath
@@ -114,5 +114,6 @@
 	<classpathentry kind="lib" path="extlibs/java/aopalliance.jar"/>
 	<classpathentry kind="lib" path="extlibs/java/rabbitmq-client.jar"/>
 	<classpathentry kind="lib" path="extlibs/java/quartz.jar"/>
+	<classpathentry kind="lib" path="extlibs/java/gwt-dnd.jar"/>
 	<classpathentry kind="output" path="dist/classes"/>
 </classpath>
