--- a/src/gwt/client/person/PersonMessages.properties
+++ b/src/gwt/client/person/PersonMessages.properties
@@ -62,6 +62,8 @@ galleryNoPhotosSelf = You don''t have any pictures in this gallery yet.
 galleryProfileNoPhotosSelf = You don''t have any pictures in your profile gallery yet.
 galleryNoPhotosOther = There are no pictures in this gallery.
 galleryNotFound = not find gallery.
+newGallery = New Gallery
+onePhoto = 1 Photo
 photoCount = {0} Photos
 slideshowStart = Slideshow
 slideshowStop = Stop
