Bling -> bar exchange completed (though some UI specifics will likely change going forward).

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -142,6 +142,13 @@ reportAffiliates = Affiliates
 blingHeader = Bling
 blingBalance = Bling Balance:
 blingWorth = Bling Worth (USD):
+exchangeBlingForBars = Exchange Bling for Bars
+exchangeBlingDescription = This will allow you to exchange a portion of your bling into an equal \
+	amount in bars.
+exchangeAmount = Bling to Exchange:
+exchangeButton = Exchange for Bars
+blingInvalidAmount = You must specify an amount of at least 1 bling.
+blingExchangeSuccessful = Your bling has been exchanged for bars successfully.
 
 # TODO: Proper linking
 # TODO: Consider moving these dynamic messages out into a seperate file to shrink MeMessagesLookup
@@ -156,3 +163,5 @@ m_created_account = Some coins to start with. Welcome to Whirled!
 m_created_profile = Award for setting up your profile.
 m_earned_badge = Award for earning a badge.
 m_bought_bars = Bought bars.
+m_exchange_spent = Spent {0} bling to exchange for bars.
+m_exchange_added = Added {0} bars from a bling exchange.
