--- a/src/gwt/client/shell/ServerMessages.properties
+++ b/src/gwt/client/shell/ServerMessages.properties
@@ -89,6 +89,10 @@ max_webmail_attempts = Too many import attempts in a short period.  Please wait 
 gallery_does_not_exist = Gallery does not exist.
 
 #
+# Money messages
+insufficient_bling = Oops. You don't have enough bling.
+
+#
 # Admin messages
 
 ab_test_duplicate_name = There is already another test with this name.
