Don't let users cross-currency buy from themselves.

--- a/src/gwt/client/shell/ServerMessages.properties
+++ b/src/gwt/client/shell/ServerMessages.properties
@@ -45,6 +45,7 @@ item_listed = This item is listed in the shop. You must delete the shop \
 # Catalog server messages
 
 hit_sales_limit = Oops. That item is limited edition and it has sold out.
+cant_self_crossbuy = You may not buy from yourself using the opposite currency.
 
 insufficient_flow = Oops. You don't have enough coins. Earn coins by playing games!
 insufficient_gold = Oops. You don't have enough bars.
