--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -162,6 +162,7 @@ m_guest_transfer = Transferred coins from your guest account when you registered
 m_created_account = Some coins to start with. Welcome to Whirled!
 m_created_profile = Award for setting up your profile.
 m_earned_badge = Award for earning a badge.
-m_bought_bars = Bought bars.
-m_exchange_spent = Spent {0} bling to exchange for bars.
-m_exchange_added = Added {0} bars from a bling exchange.
+m_bought_bars = Bought bars for {0}.
+m_cashed_out = Cashed out for {0}.
+m_exchanged_for_bars = Exchanged for bars.
+m_exchanged_from_bling = Exchanged from bling.
