Update money currently displayed when exchanging bling for bars.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -149,6 +149,11 @@ exchangeAmount = Bling to Exchange:
 exchangeButton = Exchange for Bars
 blingInvalidAmount = You must specify an amount of at least 1 bling.
 blingExchangeSuccessful = Your bling has been exchanged for bars successfully.
+blingCashOutHeader = Cash Out Your Bling!
+blingCashOutDescription = Cash out some or all of your bling by specifying the amount and clicking \
+	"Cash Out".  It may take 3-5 business days to process your request.
+blingCashOutAmount = Amount to cash out:
+blingCashOutButton = Cash Out
 
 # TODO: Proper linking
 # TODO: Consider moving these dynamic messages out into a seperate file to shrink MeMessagesLookup
