--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -203,6 +203,7 @@ interest8 = About Me:
 
 #
 # Badge level flavor text
+
 badgelevel_0 = Apprentice
 badgelevel_1 = Novice
 badgelevel_2 = Journeyman
@@ -237,57 +238,57 @@ badgeDescN_3aa0bef4 = Log {0} hours in Whirled!
 badgeDesc0_c4fd834b = Make a <a href="http://wiki.whirled.com/Friend">friend</a> in Whirled!
 badgeDescN_c4fd834b = Make {0} <a href="http://wiki.whirled.com/Friend">friends!</a>
 badgeDesc0_3ca5a071 = Give a creator feedback on a shop item by \
-<a href="http://wiki.whirled.com/Comment">commenting</a> on it!
+  <a href="http://wiki.whirled.com/Comment">commenting</a> on it!
 badgeDescN_3ca5a071 = Give {0} <a href="http://wiki.whirled.com/Comment">comments</a> to content \
-creators!
+  creators!
 badgeDesc0_e6a0e95b = Win a multiplayer game!
 badgeDescN_e6a0e95b = Win {0} multiplayer games!
 badgeDesc0_8a19eba3 = Earn a <a href="http://wiki.whirled.com/Trophies">trophy</a> in a game!
 badgeDescN_8a19eba3 = Earn {0} game <a href="http://wiki.whirled.com/Trophies">trophies</a>!
-badgeDesc0_7f70d917 = Play a game to win <a href="http://wiki.whirled.com/Coins">coins</a> and earn
- <a href="http://wiki.whirled.com/Trophies">trophies!</a>
+badgeDesc0_7f70d917 = Play a game to win <a href="http://wiki.whirled.com/Coins">coins</a> and \
+  earn <a href="http://wiki.whirled.com/Trophies">trophies!</a>
 badgeDescN_7f70d917 = Play {0} game sessions!
 badgeDesc0_ac95aafe = Come back and check out Whirled tomorrow!
 badgeDescN_ac95aafe = Check out Whirled {0} days in a row!
 badgeDesc0_fa58270b = Bring a <a href="http://wiki.whirled.com/Tutorials:_Find_Friends">real world \
-friend</a> into Whirled!
-badgeDescN_fa58270b = Bring {0} of your <a href="http://wiki.whirled.com/Tutorials:_Find_Friends">\
-real world friends</a> into Whirled!
+  friend</a> into Whirled!
+badgeDescN_fa58270b = Bring {0} of your <a href="http://wiki.whirled.com/Tutorials:_Find_Friends"> \
+  real world friends</a> into Whirled!
 badgeDesc0_e6af01a4 = Check an item in the <a href="http://wiki.whirled.com/Shop">shop</a> and \
-rate it!
+  rate it!
 badgeDescN_e6af01a4 = Rate {0} items in the <a href="http://wiki.whirled.com/Shop">shop!</a>
 badgeDesc0_1923c147 = Buy a <a href="http://wiki.whirled.com/Shop">shop</a> item, like a new \
-<a href="http://wiki.whirled.com/Avatar">avatar</a> or a <a href="http://wiki.whirled.com/Toy">\
-toy</a> for your <a href="http://wiki.whirled.com/Room">room</a>!
+  <a href="http://wiki.whirled.com/Avatar">avatar</a> or a <a href="http://wiki.whirled.com/Toy"> \
+  toy</a> for your <a href="http://wiki.whirled.com/Room">room</a>!
 badgeDescN_1923c147 = Spend {0} coins in the <a href="http://wiki.whirled.com/Shop">shop!</a>
 badgeDescN_26873aba = Earn {0} <a href="http://wiki.whirled.com/Coins">coins</a> in total shop \
-sales!
+  sales!
 badgeDesc0_325f4c9 = Get a solid rating of over 4 stars on one of your listed items!
 badgeDescN_325f4c9 = Sell {0} items in the shop with a solid rating of 4 or more stars!
 badgeDesc0_117171d7 = <a href="http://wiki.whirled.com/Create_backdrops">Upload</a> a \
-<a href="http://wiki.whirled.com/Backdrop">Backdrop</a> to Whirled!
+  <a href="http://wiki.whirled.com/Backdrop">Backdrop</a> to Whirled!
 badgeDesc1_117171d7 = <a href="http://wiki.whirled.com/Create_backdrops">List</a> a \
-<a href="http://wiki.whirled.com/Backdrop">Backdrop</a> in the \
-<a href="http://wiki.whirled.com/Shop">shop!</a>
+  <a href="http://wiki.whirled.com/Backdrop">Backdrop</a> in the \
+  <a href="http://wiki.whirled.com/Shop">shop!</a>
 badgeDesc2_117171d7 = <a href="http://wiki.whirled.com/Create_backdrops">Sell</a> a \
-<a href="http://wiki.whirled.com/Backdrop">Backdrop</a> in the \
-<a href="http://wiki.whirled.com/Shop">shop!</a>
+  <a href="http://wiki.whirled.com/Backdrop">Backdrop</a> in the \
+  <a href="http://wiki.whirled.com/Shop">shop!</a>
 badgeDesc0_f0c035cd = <a href="http://wiki.whirled.com/Create_furniture">Upload</a> a piece of \
-<a href="http://wiki.whirled.com/Furniture">Furniture</a> to Whirled!
+  <a href="http://wiki.whirled.com/Furniture">Furniture</a> to Whirled!
 badgeDesc1_f0c035cd = <a href="http://wiki.whirled.com/Create_furniture">List</a> a piece of \
-<a href="http://wiki.whirled.com/Furniture">Furniture</a> in the \
-<a href="http://wiki.whirled.com/Shop">shop!</a>
+  <a href="http://wiki.whirled.com/Furniture">Furniture</a> in the \
+  <a href="http://wiki.whirled.com/Shop">shop!</a>
 badgeDesc2_f0c035cd = <a href="http://wiki.whirled.com/Create_furniture">Sell</a> a piece of \
-<a href="http://wiki.whirled.com/Furniture">Furniture</a> in the \
-<a href="http://wiki.whirled.com/Shop">shop!</a>
+  <a href="http://wiki.whirled.com/Furniture">Furniture</a> in the \
+  <a href="http://wiki.whirled.com/Shop">shop!</a>
 badgeDesc0_6e67007d = <a href="http://wiki.whirled.com/Create_avatars">Upload</a> an \
-<a href="http://wiki.whirled.com/Avatar">Avatar</a> to Whirled!
+  <a href="http://wiki.whirled.com/Avatar">Avatar</a> to Whirled!
 badgeDesc1_6e67007d = <a href="http://wiki.whirled.com/Create_avatars#Sell.21">List</a> an \
-<a href="http://wiki.whirled.com/Avatar">Avatar</a> in the <a href="http://wiki.whirled.com/Shop">\
-shop!</a>
+  <a href="http://wiki.whirled.com/Avatar">Avatar</a> in the <a href="http://wiki.whirled.com/Shop">\
+  shop!</a>
 badgeDesc2_6e67007d = <a href="http://wiki.whirled.com/Create_avatars#Sell.21">Sell</a> an \
-<a href="http://wiki.whirled.com/Avatar">Avatar</a> in the <a href="http://wiki.whirled.com/Shop">\
-shop!</a>
+  <a href="http://wiki.whirled.com/Avatar">Avatar</a> in the <a href="http://wiki.whirled.com/Shop">\
+  shop!</a>
 
 #
 # Passport stamp categories
@@ -296,3 +297,21 @@ passportCategory_social = Mingle
 passportCategory_game = Play
 passportCategory_shopping = Shop
 passportCategory_creation = Create
+
+#
+# Money transaction messages
+
+m_item_bought = Purchased <a href="/#shop-l_{1}_{2}">{0}</a>.
+m_item_magicfree = Magic-purchased <a href="/#shop-l_{1}_{2}">{0}</a>.
+m_item_sold = Sold <a href="/#shop-l_{1}_{2}">{0}</a>.
+m_item_affiliate = Affiliated user <a href="/#people-{1}">{0}</a> purchased an item.
+m_played_game = Award from playing <a href="/#games-d_{1}">{0}</a>.
+m_invitee_joined = Award for inviting <a href="/people-{1}">{0}</a> to Whirled.
+m_guest_transfer = Transferred coins from your guest account when you registered.
+m_created_account = Some coins to start with. Welcome to Whirled!
+m_created_profile = Award for setting up your profile.
+m_earned_badge = Award for earning the {1} {0} badge.
+m_bought_bars = Bought bars for {0}.
+m_cashed_out = Cashed out for {0}.
+m_exchanged_for_bars = Exchanged for bars.
+m_exchanged_from_bling = Exchanged from bling.
