Use MessagesLookup for ServerMessages as well, so that everyone benefits from the magical generation of the .java file from the .properties file and no one has to manually stuff the rabit into the hat.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -157,8 +157,8 @@ listingPricing2 = Manual
 listingPricingTip2 = You configure the pricing to start and may update it at any time.
 
 listingPricing3 = Escalate
-listingPricingTip3 = When the number of sales reaches the target, we'll \
-  increase the price by 25%. When it reaches it again, we'll increase by \
+listingPricingTip3 = When the number of sales reaches the target, we''ll \
+  increase the price by 25%. When it reaches it again, we''ll increase by \
   another 25% and so on.
 
 listingPricing4 = Limited Edition
