--- a/src/gwt/client/shell/ServerMessages.properties
+++ b/src/gwt/client/shell/ServerMessages.properties
@@ -47,8 +47,8 @@ item_listed = This item is listed in the shop. You must delete the shop \
 hit_sales_limit = Oops. That item is limited edition and it has sold out.
 cant_self_crossbuy = You may not buy from yourself using the opposite currency.
 
-insufficient_flow = Oops. You don't have enough coins. Earn coins by playing games!
-insufficient_gold = Oops. You don't have enough bars.
+insufficient_flow = Oops. You don''t have enough coins. Earn coins by playing games!
+insufficient_gold = Oops. You don''t have enough bars.
 list_super_item = In order to list sub items in the shop, the parent item must first be listed.
 cost_updated = The price for this item has been updated.  Please refresh the page to see the \
   newest price.
@@ -91,7 +91,8 @@ gallery_does_not_exist = Gallery does not exist.
 
 #
 # Money messages
-insufficient_bling = Oops. You don't have enough bling.
+
+insufficient_bling = Oops. You don''t have enough bling.
 
 #
 # Admin messages
