Instruct Quartz to keep mum unless it has something it needs to be complaining about.

--- a/etc/log4j-production.properties
+++ b/etc/log4j-production.properties
@@ -4,7 +4,7 @@
 # Configures log4j for a production world server
 
 # Writes to an auto-rotated log file
-log4j.rootLogger = info, fileappender
+log4j.rootLogger = INFO, fileappender
 
 log4j.appender.fileappender = com.threerings.util.OOOFileAppender
 log4j.appender.fileappender.layout = org.apache.log4j.PatternLayout
@@ -15,5 +15,8 @@ log4j.appender.fileappender.DatabaseFile = log/world-server.errdb
 log4j.appender.fileappender.Email = msoy-logs@threerings.net
 log4j.appender.fileappender.PruneDays = 7
 
+# Quartz is very verbose; tone it down
+log4j.logger.org.quartz = WARN
+
 # Specify logging levels as desired
-# log4j.logger.com.threerings.foo = info
+# log4j.logger.com.threerings.foo = INFO
