--- a/etc/log4j.properties
+++ b/etc/log4j.properties
@@ -4,11 +4,14 @@
 # Configures log4j for a developer's workstation
 
 # Writes to stdout
-log4j.rootLogger = info, console
+log4j.rootLogger = INFO, console
 
 log4j.appender.console = org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout = org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern = %d %p %C{1}: %m%n
+
+# Quartz is very verbose; tone it down
+log4j.logger.org.quartz = WARN
 
 # Specify logging levels as desired
 # log4j.logger.com.threerings.foo = info
