--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -315,3 +315,5 @@ m_bought_bars = Bought bars for {0}.
 m_cashed_out = Cashed out for {0}.
 m_exchanged_for_bars = Exchanged for bars.
 m_exchanged_from_bling = Exchanged from bling.
+m_cancel_cash_out = Bling cash out canceled: {0}.
+m_request_cash_out = A request to cash out {0} bling has been submitted.
