--- a/src/gwt/client/shell/ServerMessages.properties
+++ b/src/gwt/client/shell/ServerMessages.properties
@@ -93,6 +93,7 @@ gallery_does_not_exist = Gallery does not exist.
 # Money messages
 
 insufficient_bling = Oops. You don''t have enough bling.
+already_cashed_out = You cannot cash out bling until your current request has been fulfilled.
 
 #
 # Admin messages
