Minimums for cashing out bling are now enforced.

--- a/src/gwt/client/shell/ServerMessages.properties
+++ b/src/gwt/client/shell/ServerMessages.properties
@@ -94,6 +94,7 @@ gallery_does_not_exist = Gallery does not exist.
 
 insufficient_bling = Oops. You don''t have enough bling.
 already_cashed_out = You cannot cash out bling until your current request has been fulfilled.
+below_minimum_bling = You cannot cash out less than 500 bling.
 
 #
 # Admin messages
