UI foolery, adding Bill's new remix button

--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -64,7 +64,7 @@ listingDelist = Delist Item
 listingDelistConfirm = Are you sure you want to remove this shop listing?
 
 listingReprice = Reprice Item
-listingRemix = Remix
+listingRemix = Test remix
 
 listingViewOrig = View original item
 
