Tab title fixing and fiddling.

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -180,9 +180,8 @@ genre8 = MMO / Whirled
 #
 # Default page titles
 
-worldTitle = World
 meTitle = Me
-peopleTitle = Friends
+friendsTitle = Friends
 gamesTitle = Games
 whirledsTitle = Whirleds
 shopTitle = Shop
