"Affiliated user" --> "Referred player"

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -303,7 +303,7 @@ passportCategory_creation = Create
 m_item_bought = Purchased <a href="/#shop-l_{1}_{2}">{0}</a>.
 m_item_magicfree = Magic-purchased <a href="/#shop-l_{1}_{2}">{0}</a>.
 m_item_sold = Sold <a href="/#shop-l_{1}_{2}">{0}</a>.
-m_item_affiliate = Affiliated user <a href="/#people-{1}">{0}</a> purchased an item.
+m_item_affiliate = Referred player <a href="/#people-{1}">{0}</a> purchased an item.
 m_played_game = Award from playing <a href="/#games-d_{1}">{0}</a>.
 m_invitee_joined = Award for inviting <a href="/people-{1}">{0}</a> to Whirled.
 m_guest_transfer = Transferred coins from your guest account when you registered.
