Beginnings of a support page for cashing out bling, though I'll need to revisit this after making some new changes to how the whole cash out process works in general.

--- a/src/gwt/adminz.gwt.xml.in
+++ b/src/gwt/adminz.gwt.xml.in
@@ -2,6 +2,8 @@
   <inherits name="item"/>
 
   <source path="com/threerings/msoy/admin/gwt"/>
+  <source path="com/threerings/msoy/money/data/all"/>
+  <source path="com/threerings/msoy/money/gwt"/>
 
   <source path="client/admin"/>
 
