--- a/src/gwt/client/admin/AdminMessages.properties
+++ b/src/gwt/client/admin/AdminMessages.properties
@@ -153,3 +153,8 @@ affiliate = Affiliate
 memberId = memberId
 update = Update
 badMemberId = Could not parse memberId: {0}.
+
+#
+# Cashout
+cashOutButton = Bling Cash Outs
+cashOutTitle = Bling Cash Outs
