Moving creator/support controls around. Other layout adjustments.

--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -50,7 +50,6 @@ catalogClearFilter = (show all)
 #
 # ListingDetailPanel
 
-listingListed = Listed on:
 listingPurchases = Purchases:
 
 listingBuy = Buy!
@@ -60,13 +59,13 @@ listingBuyAlt = Buy
 
 listingBuyBars = Get bars!
 
-listingDelist = Delist Item
+listingDelist = Delist
 listingDelistConfirm = Are you sure you want to remove this shop listing?
 
-listingReprice = Reprice Item
+listingReprice = Reprice
 listingRemix = Test remix
 
-listingViewOrig = View original item
+listingViewOrig = View original
 
 msgMustRegister = You need to sign up before you can buy things from the shop.
 msgRegister = Join now!
@@ -93,6 +92,7 @@ boughtOtherUsage = Click above to add your new item to this room!
 favoritesCount = Favorites:
 
 buyBars = Get Bars
+listedOn = Listed on {0}
 
 #
 # FavoritesPanel
